# packages/yucca-api-client/openapi-specs.json
@@ -816,14 +816,7 @@
         ],
         "responses": {
           "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RepositoryUpdateResponseDto"
-                }
-              }
-            }
+            "description": ""
           }
         },
         "tags": [
